The version of Fontawesome was changed to 5.15, the WOW.js library for animations was added. TO-DO: The blocks of the theme will begin to be added.

--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -8,15 +8,15 @@
     "js": "./js",
     "css": "./css",
     "csssrc": "./src/css",
-	"fonts": "./fonts",
+	"fonts": "./webfonts",
     "img": "./img",
 	"imgsrc": "./src/img",
     "sass": "./src/sass",
     "node": "./node_modules/",
 	"composer": "./vendor",
     "dev": "./src",
-    "dist": "./dist",
-    "distprod": "./dist-product",
+    "dist": "./dist/understrap-builder",
+    "distprod": "./dist-product/understrap-builder",
     "vendor": ""
   }
 }
